[gd_scene load_steps=12 format=3 uid="uid://cty0hnyocw8ms"]

[ext_resource type="Script" path="res://scenes/game_scene/ui/upgrade_card.gd" id="1_rrrn4"]
[ext_resource type="Texture2D" uid="uid://ctylb7uvjir5g" path="res://assets/sprites/upgrade_panel.png" id="2_a358h"]
[ext_resource type="FontFile" uid="uid://cps7wwwrgo0ch" path="res://assets/fonts/Yesterday Basic 10h.ttf" id="3_q4e4y"]
[ext_resource type="FontFile" uid="uid://dlweprwdb1n13" path="res://assets/fonts/ChevyRay - Love Bug.ttf" id="4_m5rv3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clqih"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7vlcs"]
font = ExtResource("3_q4e4y")
font_size = 70

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ohnrx"]
color = Color(0.0823529, 0.0823529, 0.0823529, 1)
thickness = 3

[sub_resource type="Animation" id="Animation_5t7iv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlashWhite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ki28l"]
resource_name = "selected"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.225),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlashWhite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.513726), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dus4w"]
_data = {
"RESET": SubResource("Animation_5t7iv"),
"selected": SubResource("Animation_ki28l")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xc1x"]
bg_color = Color(1, 1, 1, 1)

[node name="UpgradeCard" type="Panel"]
custom_minimum_size = Vector2(360, 0)
offset_right = 360.0
offset_bottom = 475.0
pivot_offset = Vector2(180, 225)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_clqih")
script = ExtResource("1_rrrn4")
red_color = Color(0.886275, 0.239216, 0.411765, 1)
green_color = Color(0.423529, 0.85098, 0.278431, 1)
yellow_color = Color(1, 0.85098, 0.247059, 1)

[node name="SelectRect" type="NinePatchRect" parent="."]
visible = false
modulate = Color(0.886275, 0.239216, 0.411765, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a358h")
region_rect = Rect2(0, 0, 236, 236)
patch_margin_left = 108
patch_margin_top = 108
patch_margin_right = 108
patch_margin_bottom = 108

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Content"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
text = "Title"
label_settings = SubResource("LabelSettings_7vlcs")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxLine_ohnrx")

[node name="Description" type="RichTextLabel" parent="Content"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/line_separation = 5
theme_override_fonts/normal_font = ExtResource("4_m5rv3")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Description"
scroll_active = false
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dus4w")
}

[node name="FlashWhite" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6xc1x")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
